--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,6 +1,14 @@
 .footer {
-    position: absolute;
+    background-color: #d1c4e9;
+    margin: 0 auto;
+    padding-top: 10px;
+    position: fixed;
     bottom: 0;
-    left: 0;
-    width: 100%;;
+    width: 100%;
+}
+
+.row-content {
+    margin: 0 auto;
+    padding: 50px 0px 50px 0px;
+    min-height: 400px;
 }
